--- a/deno.json
+++ b/deno.json
@@ -1,12 +1,13 @@
 {
     "name": "@spikerko/tools",
     "description": "Some of the tools that I reuse",
-    "version": "1.0.7",
+    "version": "1.1.7",
     "exports": {
         "./Animator": "./Animator.ts",
         "./DynamicBackground": "./DynamicBackground.ts",
         "./DBG_ThreeShaders": "./DBG_ThreeShaders.ts",
-        "./Whentil": "./Whentil.ts"
+        "./Whentil": "./Whentil.ts",
+        "./PrefixError": "./PrefixError.ts"
     },
     "imports": {
       "@3d/three": "jsr:@3d/three@^0.166.0",
